--- a/scholarship-disburse-app/package.json
+++ b/scholarship-disburse-app/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.9",
+    "firebase": "^11.0.2",
     "next": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
